# Atelier

./: .gitignore  CMakeLists.txt  LICENSE  README
doc/: CMakeLists.txt  DoxygenConfigure.in
include/utility/: Ray.h  Timer.h  common.h
include/utility/math/: Transform.h  Vector.h
source/engine/: CMakeLists.txt  Parallel.cpp  Parallel.h
source/kernel/: CMakeLists.txt  Integrator.cpp  Integrator.h
source/scene/: CMakeLists.txt  Primitive.cpp  Primitive.h
source/utility/: CMakeLists.txt  Timer.cpp  Vector.cpp
test/application/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt  testAll.hpp  testTimer.hpp  testTransform.hpp  testVector.hpp  unit_test_main.cpp
